--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.7"
 nonebot2 = "^2.0.0.a1"
 nb-cli = "^0.1.0"
+ujson = "^4.0.1"
+aiocache = "0.11.1"
 
 [tool.poetry.dev-dependencies]
 nonebot-test = "^0.1.0"
