--- a/.env.dev
+++ b/.env.dev
@@ -1,3 +1,17 @@
-HOST=127.0.0.1
+HOST=0.0.0.0
 PORT=8080
 DEBUG=true
+SUPERUSERS=["137959742"]
+NICKNAME=["小扎"]
+COMMAND_START=[".", "。"]
+SESSION_EXPIRE_TIMEOUT=120
+BASE_DIR="/root/root"
+
+SERVER_STATUS_CPU=true
+SERVER_STATUS_MEMORY=true
+SERVER_STATUS_DISK=false
+
+APSCHEDULER_AUTOSTART=true
+APSCHEDULER_CONFIG={ "apscheduler.timezone": "Asia/Shanghai" }
+
+WEATHER_API_KEY=""
