--- a/.env.dev
+++ b/.env.dev
@@ -1,11 +1,11 @@
 HOST=0.0.0.0
 PORT=8080
 DEBUG=true
-SUPERUSERS=["137959742"]
+SUPERUSERS=[""]
 NICKNAME=["小扎"]
 COMMAND_START=[".", "。"]
 SESSION_EXPIRE_TIMEOUT=120
-BASE_DIR="/root/root"
+BASE_DIR=""
 
 SERVER_STATUS_CPU=true
 SERVER_STATUS_MEMORY=true
