--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build: .
     container_name: bot
     volumes:
-      - "/etc/localtime:/etc/localtime"
+      - "/etc/localtime:/etc/localtime:ro"
       - "./:/app/"
     ports:
       - "8080:8080" # 映射端口到宿主机 宿主机端口:容器端口
