添加晨间播报

--- a/.env.dev
+++ b/.env.dev
@@ -6,12 +6,15 @@ NICKNAME=["小扎"]
 COMMAND_START=[".", "。"]
 SESSION_EXPIRE_TIMEOUT=120
 BASE_DIR=""
+BOTS=[""]
 
 SERVER_STATUS_CPU=true
 SERVER_STATUS_MEMORY=true
-SERVER_STATUS_DISK=false
+SERVER_STATUS_DISK=true
 
 APSCHEDULER_AUTOSTART=true
 APSCHEDULER_CONFIG={ "apscheduler.timezone": "Asia/Shanghai" }
 
-WEATHER_API_KEY=""
+WEATHER_API_KEY="c7115884bf51420794d7c3e3e1273e27"
+
+MORNING_GROUPS=[{"id":"", "place":"", "idx": ""}]
