--- a/.env.dev
+++ b/.env.dev
@@ -15,6 +15,6 @@ SERVER_STATUS_DISK=true
 APSCHEDULER_AUTOSTART=true
 APSCHEDULER_CONFIG={ "apscheduler.timezone": "Asia/Shanghai" }
 
-WEATHER_API_KEY="c7115884bf51420794d7c3e3e1273e27"
+WEATHER_API_KEY=""
 
 MORNING_GROUPS=[{"id":"", "place":"", "idx": ""}]
