添加聊天机制

--- a/.env.dev
+++ b/.env.dev
@@ -18,3 +18,6 @@ APSCHEDULER_CONFIG={ "apscheduler.timezone": "Asia/Shanghai" }
 WEATHER_API_KEY=""
 
 MORNING_GROUPS=[{"id":"", "place":"", "idx": ""}]
+
+APP_ID = ""
+APP_KEY = ""
