添加数据库连接池

--- a/.env.dev
+++ b/.env.dev
@@ -23,3 +23,9 @@ MORNING_GROUPS=[{"id":"", "place":"", "idx": ""}]
 
 APP_ID = ""
 APP_KEY = ""
+
+MYSQL_HOST = ""
+MYSQL_PORT = ""
+MYSQL_USER = ""
+MYSQL_PASSWORD = ""
+MYSQL_DB = ""
