修复mysql插件bug 完成签到功能 优化早安事件

--- a/.env.dev
+++ b/.env.dev
@@ -6,7 +6,6 @@ NICKNAME=["小扎"]
 COMMAND_START=[".", "。"]
 SESSION_EXPIRE_TIMEOUT=120
 BASE_DIR=""
-BOTS=[""]
 
 SERVER_STATUS_CPU=true
 SERVER_STATUS_MEMORY=true
@@ -27,3 +26,6 @@ MYSQL_PORT = ""
 MYSQL_USER = ""
 MYSQL_PASSWORD = ""
 MYSQL_DB = ""
+
+SIGN_IN_MONEY_DOWN = 1
+SIGN_IN_MONEY_UP = 20
