--- a/.env.prod.sample
+++ b/.env.prod.sample
@@ -1,8 +1,8 @@
-HOST=
-PORT=
-DEBUG=
+HOST=127.0.0.1
+PORT=8888
+DEBUG=true
 SUPERUSERS=[""]
-NICKNAME=[""]
+NICKNAME=["小扎"]
 COMMAND_START=[".", "。"]
 SESSION_EXPIRE_TIMEOUT=120
 BASE_DIR=""
@@ -17,6 +17,6 @@ MONEY_UNIT = "$"
 SIGN_IN_MONEY_LOWER_LIMIT = 1
 SIGN_IN_MONEY_UPPER_LIMIT = 20
 
-MONGO_URL = ""
+MONGO_URL = "mongodb://127.0.0.1:27017"
 
 SLEEP_TIME = 8
