--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "docs:build": "vuepress build docs"
   },
   "devDependencies": {
+    "@vuepress/plugin-palette": "^2.0.0-beta.49",
     "@vuepress/plugin-search": "^2.0.0-beta.49",
     "vuepress": "^2.0.0-beta.49"
   }
