--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -24,10 +24,12 @@ jobs:
           ${{ runner.OS }}-build-${{ env.cache-name }}-
           ${{ runner.OS }}-build-
           ${{ runner.OS }}-
+    - name: Install Yarn
+      run: npm install --global yarn
     - name: Install Packages
-      run: npm install
+      run: yarn install
     - name: Build page
-      run: npm run docs:build
+      run: yarn docs:build
     - name: move cname
       run: mv ./docs/.vuepress/CNAME ./docs/.vuepress/dist/CNAME
     - name: Deploy to gh-pages
