--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,14 @@
-[tool.poetry]
-name = "bot"
+[project]
+name = "zhabot"
 version = "0.1.0"
-description = "bot"
-authors = ["xmmmmmovo"]
+description = "zhabot"
 readme = "README.md"
+authors = ["xmmmmmovo"]
+requires-python = ">=3.8, <4.0"
 
 [tool.nonebot]
+adapters = [
+    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
+]
 plugins = ["nonebot_plugin_apscheduler"]
 plugin_dirs = ["src/plugins", "src/middleware"]
