--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -30,10 +30,9 @@ jobs:
       run: yarn install
     - name: Build page
       run: yarn docs:build
-    - name: move cname
-      run: mv ./docs/.vuepress/CNAME ./docs/.vuepress/dist/CNAME
     - name: Deploy to gh-pages
-      uses: peaceiris/actions-gh-pages@v3
+      uses: peaceiris/actions-gh-pages@v4
       with:
-        github_token: ${{ secrets.TOKEN }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./docs/.vuepress/dist
+        cname: bot.fivezha.cn
