--- a/.env.prod.sample
+++ b/.env.prod.sample
@@ -10,7 +10,24 @@ BASE_DIR=""
 APSCHEDULER_AUTOSTART=true
 APSCHEDULER_CONFIG={ "apscheduler.timezone": "Asia/Shanghai" }
 
-WEATHER_API_KEY=""
+MONEY_UNIT = "$"
+
+SIGN_IN_MONEY_LOWER_LIMIT = 1
+SIGN_IN_MONEY_UPPER_LIMIT = 20
+
+MONGO_URL = "mongodb://127.0.0.1:27017"
+
+SLEEP_TIME = 8HOST=127.0.0.1
+PORT=8888
+DEBUG=true
+SUPERUSERS=[""]
+NICKNAME=["小扎"]
+COMMAND_START=[".", "。"]
+SESSION_EXPIRE_TIMEOUT=120
+BASE_DIR=""
+
+APSCHEDULER_AUTOSTART=true
+APSCHEDULER_CONFIG={ "apscheduler.timezone": "Asia/Shanghai" }
 
 MONEY_UNIT = "$"
 
